--- a/appspec.yml
+++ b/appspec.yml
@@ -6,6 +6,13 @@ files:
     destination: /var/www/html
     overwrite: true
 
+file_permissions:
+  - object: /var/www/html/scripts/
+    pattern: "*.sh"
+    owner: ubuntu
+    group: ubuntu
+    mode: 755
+
 hooks:
   ApplicationStop: 
     - location: scripts/stop_server.sh
