--- a/appspec.yml
+++ b/appspec.yml
@@ -19,6 +19,12 @@ hooks:
       runas: ubuntu
       mode: 755
 
+  ApplicationStop:
+    - location: scripts/stop_server.sh
+      timeout: 300
+      runas: ubuntu
+      mode: 755
+
   ApplicationStart:  
     - location: scripts/start_server.sh
       timeout: 300
