--- a/appspec.yml
+++ b/appspec.yml
@@ -10,24 +10,24 @@ hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
-      runas: root
+      runas: ubuntu
       mode: 755
 
   AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
-      runas: root
+      runas: ubuntu
       mode: 755
 
   ApplicationStop:
     - location: scripts/stop_server.sh
       timeout: 300
-      runas: root
+      runas: ubuntu
       mode: 755
 
   ApplicationStart:  
     - location: scripts/start_server.sh
       timeout: 300
-      runas: root
+      runas: ubuntu
       mode: 755
 
